[package]
name = "tx"
version = "0.1.0"
authors = ["Kamil Adamczyk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.23"
strum_macros = "0.23"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
async-channel = "1.6"
futures-lite = "1.11"
rand = "0.8"
num_cpus = "1.0"
